2.66 - segmentation fault when selecting an object during the initial phase of rendering #34322

Closed
opened 2013-02-19 13:29:36 +01:00 by Dani Epstein · 7 comments

%%%Open the file, hit F12, and then in one of the right-hand windows select a mesh. This results in a segmentation fault, at least on my computer.

Ubuntu 12.10 64-bit
NVIDIA Driver Version: 304.43
Graphics Crad: GeForce GTX 460 2GB

- Blender version with error, and version that worked ---

This bug occurs from at least r51699. It might in earlier versions post r51611 (see further), but I only have r51611 to check with.
The bug also occurs in build 54535 (from the Buildbot)
I tried it with a build 51611 and that error does not occur.%%%

%%%Open the file, hit F12, and then in one of the right-hand windows select a mesh. This results in a segmentation fault, at least on my computer. Ubuntu 12.10 64-bit NVIDIA Driver Version: 304.43 Graphics Crad: GeForce GTX 460 2GB - Blender version with error, and version that worked --- This bug occurs from at least r51699. It might in earlier versions post r51611 (see further), but I only have r51611 to check with. The bug also occurs in build 54535 (from the Buildbot) I tried it with a build 51611 and that error does not occur.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Editing 3d while render is always tricky and could be instable. For this case (select) things could just work though...
Brecht: crash is here:

Program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: 13 at address: 0x0000000000000000
[Switching to process 53428 thread 0xdf1b]
0x00000001015b7f2c in rna_MeshTextureFace_uv2_get (ptr=0x111df3118, values=0x111df3140) at rna_mesh.c:282
282 values- [x] = mtface->uv- [x][0];
(gdb) where

  • 0 0x00000001015b7f2c in rna_MeshTextureFace_uv2_get (ptr=0x111df3118, values=0x111df3140) at rna_mesh.c:282
  • 1 0x00000001015ccb63 in MeshTextureFace_uv2_get (ptr=0x111df3118, values=0x111df3140) at rna_mesh_gen.c:5234
  • 2 0x00000001017cb71c in BL::MeshTextureFace::uv2 (this=0x111df3118) at RNA_blender_cpp.h:40876
  • 3 0x00000001017c0128 in mikk_get_texture_coordinate (context=0x111df4580, uv=0x111df3188, face_num=41366, vert_num=1) at blender_mesh.cpp:89

On retry, it is here

[Switching to process 53434 thread 0xe70b]
0x00000001015ca7cb in MeshTessFace_vertices_raw_get (ptr=0x116e09d28, values=0x116e09d48) at rna_mesh_gen.c:4506
4506 values- [x] = (int)((&data->v1)[i]);
(gdb) where

  • 0 0x00000001015ca7cb in MeshTessFace_vertices_raw_get (ptr=0x116e09d28, values=0x116e09d48) at rna_mesh_gen.c:4506
  • 1 0x00000001017cb030 in BL::MeshTessFace::vertices_raw (this=0x116e09d28) at RNA_blender_cpp.h:40824

2 0x00000001017bff9d in mikk_get_position (context=0x116e0a580, P=0x116e09dc4, face_num=44989, vert_num=2) at blender_mesh.cpp:71

%%%

%%%Editing 3d while render is always tricky and could be instable. For this case (select) things could just work though... Brecht: crash is here: Program received signal EXC_BAD_ACCESS, Could not access memory. Reason: 13 at address: 0x0000000000000000 [Switching to process 53428 thread 0xdf1b] 0x00000001015b7f2c in rna_MeshTextureFace_uv2_get (ptr=0x111df3118, values=0x111df3140) at rna_mesh.c:282 282 values- [x] = mtface->uv- [x][0]; (gdb) where - 0 0x00000001015b7f2c in rna_MeshTextureFace_uv2_get (ptr=0x111df3118, values=0x111df3140) at rna_mesh.c:282 - 1 0x00000001015ccb63 in MeshTextureFace_uv2_get (ptr=0x111df3118, values=0x111df3140) at rna_mesh_gen.c:5234 - 2 0x00000001017cb71c in BL::MeshTextureFace::uv2 (this=0x111df3118) at RNA_blender_cpp.h:40876 - 3 0x00000001017c0128 in mikk_get_texture_coordinate (context=0x111df4580, uv=0x111df3188, face_num=41366, vert_num=1) at blender_mesh.cpp:89 On retry, it is here [Switching to process 53434 thread 0xe70b] 0x00000001015ca7cb in MeshTessFace_vertices_raw_get (ptr=0x116e09d28, values=0x116e09d48) at rna_mesh_gen.c:4506 4506 values- [x] = (int)((&data->v1)[i]); (gdb) where - 0 0x00000001015ca7cb in MeshTessFace_vertices_raw_get (ptr=0x116e09d28, values=0x116e09d48) at rna_mesh_gen.c:4506 - 1 0x00000001017cb030 in BL::MeshTessFace::vertices_raw (this=0x116e09d28) at RNA_blender_cpp.h:40824 # 2 0x00000001017bff9d in mikk_get_position (context=0x116e0a580, P=0x116e09dc4, face_num=44989, vert_num=2) at blender_mesh.cpp:71 %%%

%%%Developer note:
This is because of undo happens on select and this push will temporary set meshes' mface to NULL, making other threads fail if they needs tessfaces. In case of Cycles it's probably solvable by adding temporary meshes to separate Main. Not sure about BI render and baking, from first glance this areas seems to be robust for this issue, but i could be missing something.

Another (hackish) way could be to tag temp meshes as "skip for save"...%%%

%%%Developer note: This is because of undo happens on select and this push will temporary set meshes' mface to NULL, making other threads fail if they needs tessfaces. In case of Cycles it's probably solvable by adding temporary meshes to separate Main. Not sure about BI render and baking, from first glance this areas seems to be robust for this issue, but i could be missing something. Another (hackish) way could be to tag temp meshes as "skip for save"...%%%

%%%And assigning to Brecht back :)

P.S. This is actually an old issue, so probably could wait for after 2.66 (which we still hope will happen tomorrow), so maybe it makes more sense to fix the issue after release to avoid possible sideeffects caused by quick fix..%%%

%%%And assigning to Brecht back :) P.S. This is actually an old issue, so probably could wait for after 2.66 (which we still hope will happen tomorrow), so maybe it makes more sense to fix the issue after release to avoid possible sideeffects caused by quick fix..%%%
Author

%%%FWIW, I don't think this is a serious issue, since from what I can see most people render with the "Full Screen" layout, making this much of a non-issue for them.%%%

%%%FWIW, I don't think this is a serious issue, since from what I can see most people render with the "Full Screen" layout, making this much of a non-issue for them.%%%

%%%Found a simpler fix for this case, just don't modify existing Mesh data structures for file save but rather a copy.

While this may crash mostly with Cycles, I think it's best to keep file save a read only operation because any threaded access can potentially crash even if they don't use temporary meshes, it's just less likely.%%%

%%%Found a simpler fix for this case, just don't modify existing Mesh data structures for file save but rather a copy. While this may crash mostly with Cycles, I think it's best to keep file save a read only operation because any threaded access can potentially crash even if they don't use temporary meshes, it's just less likely.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34322
No description provided.